examples/valid/program7.c
int main() {
    int a;
    int b;
    int result;
    a = 17;
    b = 5;
    result = a % b;
    return result;
}

